--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Sistema de Gerenciamento Funerário",
   "short_name": "Gerenciador",
   "description": "Controle completo de clientes, prazos e finanças para serviços funerários.",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f1f5f9",
   "theme_color": "#4f46e5",
@@ -18,4 +18,5 @@
       "type": "image/png"
     }
   ]
+
 }
